# home-credit-kaggle

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: base.py  check_feature_importance.py
