[tool.poetry]
name = "home-credit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
lightgbm = "^4.3.0"
numpy = "^1.26.4"
pandas = "^2.2.1"
polars = "^0.20.18"
wandb = "^0.16.6"
scikit-learn = "^1.4.1.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-base = "scripts.base:main"

[tool.poetry.install]
package-mode = false